# django-diveops

./: .gitignore  CLAUDE.md  README.md  docker-compose.small.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: add-ssh-key.yml  ci.yml  create-superuser.yml  deploy.yml  setup-ssl.yml
android/: .gitignore  buceo-release.keystore.old  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docker/nginx/: nginx.conf  nginx.http-only.conf  nginx.small.conf
docker/nginx/conf.d/: common.conf
docs/: DEPLOYMENT.md  TDD_INCOMPLETE_FEATURES.md
locale/en/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
rust/src/deco/: mod.rs  models.rs  routes.rs  validator.rs
rust/src/models/: blog.rs
rust/src/pricing/: routes.rs
rust/src/routes/: app.rs
rust/templates/: base.html
rust/templates/app/: download.html
rust/templates/cms/: page.html
rust/templates/components/blocks/: block.html
scripts/: deploy.sh  fix_production_schema.sh  fix_schema_simple.sql  install-hooks.sh
scripts/hooks/: commit-msg  pre-commit
src/diveops/: urls.py
src/diveops/core/: middleware.py  views.py
src/diveops/core/management/commands/: seed_cms.py
src/diveops/operations/: _services.py  chat_api_views.py  consumers.py  mobile_api_views.py  mobile_urls.py  public_views.py  routing.py
src/diveops/operations/management/commands/: import_fb_posts.py  publish_app_article.py
src/diveops/operations/migrations/: 0073_mobile_app_features.py
src/diveops/operations/models/: __init__.py  app.py  location.py
src/diveops/operations/planning/: deco_runner.py
src/diveops/operations/preferences/tests/: test_courseware_recommendations.py
src/diveops/operations/pricing/tests/: test_services.py
src/diveops/operations/services/: __init__.py  chat_queries.py
src/diveops/operations/tests/: test_accounts.py  test_booking_services.py  test_chat_queries.py  test_mobile_api_views.py  test_mobile_models.py  test_settlement_services.py  test_staff_views_permissions.py  test_webrtc_consumer.py
src/diveops/portal_ui/: __init__.py  apps.py  mixins.py
src/diveops/portal_ui/templatetags/: portal_ui_tags.py
src/diveops/settings/: base.py  dev.py  prod.py  test.py
src/diveops/store/tests/: test_cms_access.py  test_entitlements.py  test_fulfillment.py
src/static/diveops/js/: webrtc-client.js
static/diveops/js/: webrtc-client.js
templates/cms/: app-download.html
templates/diveops/staff/chat/: inbox.html  thread.html
templates/diveops/staff/crm/: conversation.html
templates/portal_ui/: base_portal.html  base_public.html  base_staff.html
templates/portal_ui/components/: portal_sidebar.html  staff_sidebar.html
templates/pricing/: price_list.html  resolver.html
templates/registration/: logged_out.html  login.html
(+40 files in other folders)
