[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-diveops"
version = "0.1.0"
description = "Dive Operations Management System"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0",
    "psycopg[binary]>=3.1",
    "gunicorn>=21.0",
    "whitenoise>=6.6",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "channels>=4.0",
    "channels-redis>=4.2",
    "boto3>=1.34",
    "django-storages>=1.14",
    "Pillow>=10.0",
    "weasyprint>=60.0",
    "python-json-logger>=2.0",
    "djangorestframework>=3.14",
    "firebase-admin>=6.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=24.0",
    "isort>=5.13",
    "ipython>=8.0",
    "django-debug-toolbar>=4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/diveops"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "diveops.settings.test"
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests", "src/diveops"]
addopts = "-v --tb=short --ignore=lib/ --ignore=rust/"
norecursedirs = ["lib", "rust", "android", "node_modules", ".git", "staticfiles"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120
known_django = ["django"]
known_first_party = ["diveops"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
